start.sh renamed to j-algo.sh